--- a/practice/CSS/think_drink.css
+++ b/practice/CSS/think_drink.css
@@ -1,49 +1,93 @@
-* {
-  margin: 0;
+
+
+
+body{
+  width: 80%;
   padding: 0;
+  margin: 0 auto;
+
 }
 
+
+
 .main_header {
-  display: block;
+  display: flex;
   width: 100%;
-  height: 150px;
+  height: 12vh;
   background-color: rgb(52, 53, 63);
-  align-items: center;
   float: left;
   text-align: left;
   padding-top: 0;
   justify-content: space-between;
+  align-items: center;
 }
 
 h1 {
+  padding-left: 2vh;
   display: inline-block;
   color: white;
-  padding: 60px 30px 30px 30px;
 }
 
 .main_header_nav {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  float: right;
+  width: 30%;
+  height: 60%;
   border-radius: 30px;
-  margin-top: 30px;
-  margin-right: 30px;
+  margin-right: 2vw;
   background-color: aliceblue;
   align-items: center;
 }
+.main_header_nav>ul{
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 0;
 
-.main_header_links {
-  display: inline-block;
-  padding: 30px 60px;
+}
+.main_header_nav ul li{
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: center;
   border-radius: 30px;
   background-color: skyblue;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+
+}
+.main_header_links {
+  padding-top: 2.2vh;
+  display: inline-block;
+  font-weight:900;
+  font-size: 1.3rem;
   text-decoration-line: none;
   text-align: center;
   color: black;
-  font-size: large;
+}
+.main_header_nav ul li:hover {
+  background-color: aqua;
 }
 
+
+#wrap{
+  display: flex;
+  width: 100%;
+  height: auto;
+  border: 1px solid silver;
+  flex-direction: row;
+  justify-content: space-between;
+}
+article{
+  display: inline-block;
+  padding-left: 2vw;
+  width: 67%;
+}
 dd > a {
   text-decoration: none;
   color: green;
@@ -67,32 +111,29 @@ section > ul {
   padding-left: 20px;
 }
 
-.main_header_links:hover {
-  background-color: aqua;
-}
 
-article {
-  display: inline-block;
-  border: 2px solid;
-  padding: 5%;
-}
 
-img {
-  border-radius: 30px;
-  margin-left: 30px;
-}
+/*article {*/
+/*  display: inline-block;*/
+/*  border: 2px solid;*/
+/*}*/
 
-p {
-  display: block;
-  padding: 50px;
-  width: 1000px;
-}
+/*img {*/
+/*  border-radius: 30px;*/
+/*  margin-left: 30px;*/
+/*}*/
 
-dt {
-  margin-left: 20px;
-}
+/*p {*/
+/*  display: block;*/
+/*  padding: 50px;*/
+/*  width: 1000px;*/
+/*}*/
 
-dd {
-  padding: 20px;
-  padding-left: 40px;
-}
+/*dt {*/
+/*  margin-left: 20px;*/
+/*}*/
+
+/*dd {*/
+/*  padding: 20px;*/
+/*  padding-left: 40px;*/
+/*}*/
