--- a/practice/view/index.html
+++ b/practice/view/index.html
@@ -7,6 +7,9 @@
 		<title>Jineun_Backend's</title>
 		<link href = "https://fonts.googleapis.com/icon?family=Material+Icons" rel = "stylesheet">
 		<link rel = "stylesheet" href = "../CSS/think_drink.css">
+		<link rel = "stylesheet"
+		      href = "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,500,0,200"/>
+		<script defer src = "../js/index.js"></script>
 		<style>
 		</style>
 	
@@ -17,7 +20,12 @@
 		<header class = "main_header">
 			
 			<h1> 벡엔드 개발자 박진은 </h1>
-			<nav class = "main_header_nav">
+			
+			<span class = "material-symbols-outlined" id="nav_icon">
+				menu
+			</span>
+			
+			<nav class = "toggling main_header_nav" id="navbar">
 				<ul class = "main_header_span">
 					<li><a class = "main_header_links" href = "#">Skills</a></li>
 					<li href = ""><a class = "main_header_links" href = "#">Projects</a></li>
@@ -54,8 +62,6 @@
 					<dd><a href = "https://velog.io/@wlsdmsrnfl">
 						<h3>tect_study_blog_link</h3>
 					</a></dd>
-					
-					
 					<dt>
 						<h3>Email</h3>
 					</dt>
